--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
             <article class="app-card">
               <img src="sunset-score/icon-3-512.png" alt="Sunset Score icon" />
               <h3>Sunset Score</h3>
-              <p>Sunset forecasting and scoring app.</p>
+              <p>Don't miss the next incredible sunset in your area!</p>
               <a href="/sunset-score/">Privacy Policy and Terms</a>
             </article>
             <article class="app-card">
               <img src="icon-9-1024.png" alt="Double You icon" />
               <h3>Double You</h3>
-              <p>Video clone creation app.</p>
+              <p>Clone yourself in a video.</p>
               <a href="/double-you/">Privacy Policy and Terms</a>
             </article>
           </div>
