--- a/double-you/index.html
+++ b/double-you/index.html
@@ -240,6 +240,9 @@
 
           <p>One phone. Two takes. Infinite possibilities. Download Double You and start cloning.</p>
         </section>
+        <div style="text-align: center; margin-top: 24px;">
+          <a href="support/" style="color: var(--muted); text-decoration: none; font-size: 15px;">Support &amp; FAQ &rarr;</a>
+        </div>
       </main>
     </div>
 
