--- a/index.html
+++ b/index.html
@@ -266,12 +266,14 @@
               <h3>Sunset Score</h3>
               <p>Don't miss the next incredible sunset in your area!</p>
               <a href="/sunset-score/">Privacy Policy and Terms</a>
+              <a href="/sunset-score/support/">Support &amp; FAQ</a>
             </article>
             <article class="app-card">
               <img src="icon-9-1024.png" alt="Double You icon" />
               <h3>Double You</h3>
               <p>Clone yourself in a video.</p>
               <a href="/double-you/">Privacy Policy and Terms</a>
+              <a href="/double-you/support/">Support &amp; FAQ</a>
             </article>
           </div>
         </section>
