--- a/sunset-score/index.html
+++ b/sunset-score/index.html
@@ -264,6 +264,9 @@
         <section class="card">
           <div id="content" class="loading">Loading policy content...</div>
         </section>
+        <div style="text-align: center; margin-top: 24px;">
+          <a href="support/" style="color: rgba(255, 255, 255, 0.7); text-decoration: none; font-size: 15px;">Support &amp; FAQ &rarr;</a>
+        </div>
       </main>
     </div>
 
